--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/vubao2303/book-practice#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.12.3",
+    "react": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
