--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "book-practice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -20,9 +26,11 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "concurrently": "^6.0.1",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.12.3",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-router-dom": "^5.2.0"
   }
